# iggy-elixir-client

./: .gitignore  LICENSE  README.md  mix.exs
lib/: iggy_ex.ex
lib/iggy_ex/: native.ex
native/iggy_nif/: Cargo.toml  rust_toolchain.toml
native/iggy_nif/.cargo/: config.toml
native/iggy_nif/src/: atom.rs  client.rs  lib.rs  send_message.rs
test/: iggy_ex_test.exs
